################################################################################
# This is the Changelog for testsuite source code changes.                     #
# Possible keywords: "Bugfix", "Belongs to", "Review", "Enhancem.",            #
#                    "Merged from", "Cleanup"                                  #
################################################################################
          1         2         3         4         5         6         7
01234567890123456789012345678901234567890123456789012345678901234567890123456789
-----------------+-----------+--------------------------------------------------
SH-2009-05-14-1: Enhancem.:  Allow only ports >= 1024 for COMMD and JMX port.
                             Check if reserved port is < 1024.
                 Review:     CR

SH-2009-05-14-0: Bugfix:     fixed TCL-Error in inst_submit_host test.
                 Review:     DG

CR-2009-05-14-0: Cleanup:    splitted job_environment test into two sub tests
                 Review:     SH

HP-2009-05-14-0: Bugfix:     Wrong parsing of ps output on win32-x86 in
                             get_ps_info()
                 Bugfix:     Wrong parsing of ps "state" field in issue 126
                 Bugfix:     Selection of win32-x86 host for drmaa test in
                             resource_reservation test.
                 Review:     MD

TB-2009-05-14-0: Bugfix:     Function control_procedures/handle_vi_edit used
                             incorrectly global ts_config array instead of
                             get_current_cluster_config_array for determining
                             master host and path to vi
                 Review:     RH

CR-2009-05-13-1: Bugfix:     fixed job_environment test
                 Belongs to: CR-2009-05-12-0
                 Review:     AA

CR-2009-05-13-0: Cleanup:    o tcl error in qstat test
                             o documented set/get_jobseqnum() procedures